# email-labeler

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README-technical.md  README.md  classifier.py  config.toml  config_utils.py  daemon.py  gmail_utils.py  labeler.py  llm_client.py  newsletter.py  proxy_client.py  pyproject.toml  retry.py  tui.py  tui_common.py  tui_data.py
docs/: newsletter-label-ux-redesign.md
evals/: README-technical.md  README.md  __init__.py  edit_tui.py  harvest.py  llm_cache.py  newsletter_harvest.py  newsletter_label.py  newsletter_report.py  newsletter_run.py  newsletter_schemas.py  report.py  review.py  run_eval.py  run_web.py  schemas.py  web_app.py  web_auth.py  web_data.py
evals/templates/: base.html  runs.html  (+3 more)
newsletter_review/: __main__.py  tui.py
scripts/: eval_model.py  smoke_concurrency.py
tests/: conftest.py  test_classifier.py  test_config_utils.py  test_daemon.py  test_env_var_docs.py  test_eval_cli_docs.py  test_eval_edit_tui.py  test_eval_harvest.py  test_eval_model.py  test_eval_newsletter_cli_docs.py  test_eval_newsletter_harvest.py  test_eval_newsletter_label.py  test_eval_newsletter_report.py  test_eval_newsletter_run.py  test_eval_newsletter_schemas.py  test_eval_report.py  test_eval_review.py  test_eval_run.py  test_eval_schemas.py  test_eval_util.py  test_gmail_utils.py  test_labeler.py  test_llm_cache.py  test_llm_client.py  test_newsletter.py  test_newsletter_eval_docs.py  test_newsletter_review.py  test_proxy_client.py  test_retry.py  test_smoke_concurrency.py  test_tui.py  test_tui_common.py  test_tui_data.py
(+19 files in other folders)
