[project]
name = "email-labeler"
version = "0.1.0"
description = "Background daemon that classifies Gmail emails using a two-tier LLM system"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-subtests>=0.13.0",
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 110

[tool.ruff.lint]
select = ["E", "F", "I"]
